--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <img src="https://codeworks.blob.core.windows.net/public/assets/img/cw-mark.png" height="45" alt=""
           loading="lazy">
         <span class="ms-2">winter23_gregslist_async</span>
+        <button onclick="app.carsController.getCars()" class="btn btn-outline-light">Cars</button>
+        <button onclick="app.housesController.getHouses()" class="btn btn-outline-light">Houses</button>
+        <button onclick="" class="btn btn-outline-light">Jobs</button>
       </a>
     </nav>
   </header>
